# FlashlightDisablingManager

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: CMakeLists.cmake  Version.h.in  sourcelist.cmake
include/: randutils.hpp
src/: CellHandler.cpp  CellHandler.h  DisableEffectHandler.cpp  DisableEffectHandler.h  EffectHandler.cpp  EffectHandler.h  FlashlightHandler.cpp  FlashlightHandler.h  Hooks.h  Offsets.h  PCH.h  Papyrus.cpp  Papyrus.h  Utils.cpp  Utils.h  WeatherEffectHandler.cpp  WeatherEffectHandler.h  main.cpp
